--- a/View/Macro/PortalTemplate.html.twig
+++ b/View/Macro/PortalTemplate.html.twig
@@ -2,13 +2,75 @@
     Loads and displays a list of messages from the given types
 -->
 {% macro message(log, types, style) %}
-{% set messages = log.read(types) %}
-{% if messages|length > 0 %}
-<div class="toast toast-{{ style }}">
-    {% for msg in messages %}
-    {{ msg.message|raw }}
-    {% if not loop.last %}<br />{% endif %}
-    {% endfor %}
-</div>
-{% endif %}
+    {% set messages = log.read(types) %}
+    {% if messages|length > 0 %}
+        <div class="toast toast-{{ style }}">
+            {% for msg in messages %}
+                {{ msg.message|raw }}
+                {% if not loop.last %}<br />{% endif %}
+            {% endfor %}
+        </div>
+    {% endif %}
+{% endmacro %}
+
+{% macro loginModal(i18n) %}
+    <form action="{{ constant('FS_ROUTE') }}/" method="post" class="form">
+        <div class="modal modal-sm" id="loginModal">
+            <a href="#close" class="modal-overlay" aria-label="Close"></a>
+            <div class="modal-container">
+                <div class="modal-header">
+                    <a href="#close" onclick="return hideModal('loginModal')" class="btn btn-clear float-right" aria-label="Close"></a>
+                    <div class="modal-title h5">{{ i18n.trans('login') }}</div>
+                </div>
+                <div class="modal-body">
+                    <div class="content">
+                        <a href="{{ constant('FS_ROUTE') }}/FacebookLogin" class="btn btn-block">
+                            <i class="fa fa-facebook fa-fw" aria-hidden="true"></i> facebook
+                        </a>
+                        <div class="divider text-center" data-content="OR"></div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <span class="input-group-addon">
+                                    <i class="fa fa-user fa-fw" aria-hidden="true"></i>
+                                </span>
+                                <input type="text" name="fsNick" class="form-input" maxlength="50" placeholder=" {{ i18n.trans('user') }}" required="" autocomplete="off"/>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <span class="input-group-addon">
+                                    <i class="fa fa-key fa-fw" aria-hidden="true"></i>
+                                </span>
+                                <input type="password" name="fsPassword" class="form-input" maxlength="50" placeholder=" {{ i18n.trans('password') }}" required="" autocomplete="off"/>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-block btn-primary">
+                            {{ i18n.trans('login') }}
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+{% endmacro %}
+
+{% macro logoutModal(i18n, fsc) %}
+    <div class="modal modal-sm" id="logoutModal">
+        <a href="#close" class="modal-overlay" aria-label="Close"></a>
+        <div class="modal-container">
+            <div class="modal-header">
+                <a href="#close" onclick="return hideModal('logoutModal')" class="btn btn-clear float-right" aria-label="Close"></a>
+                <div class="modal-title h5">{{ i18n.trans('logout') }}</div>
+                <i class="fa fa-user-circle fa-fw" aria-hidden="true"></i>
+                <span>{{ fsc.contact.email }}</span>
+            </div>
+            <div class="modal-body">
+                <div class="content">
+                    <a href="{{ constant('FS_ROUTE') }}/?public_logout=TRUE" class="btn btn-block btn-error">
+                        <i class="fa fa-sign-out fa-fw" aria-hidden="true"></i> {{ i18n.trans('logout') }}
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endmacro %}
