Replaced javascript twig block to javascripts, to avoid problems with PhpStorm

--- a/View/Master/PortalTemplate.html.twig
+++ b/View/Master/PortalTemplate.html.twig
@@ -124,7 +124,7 @@
                 </div>
             </div>
         {% endblock %}
-        {% block javascript %}
+        {% block javascripts %}
             <script type="text/javascript">
                 function showModal(idModal) {
                     var element = document.getElementById(idModal);
