--- a/View/Master/PortalTemplate.html.twig
+++ b/View/Master/PortalTemplate.html.twig
@@ -11,7 +11,7 @@
             <meta name="description" content="{{ fsc.webPage.description }}" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
             <meta name="generator" content="FacturaScripts" />
-            {% if fsc.webpage.noindex %}<meta name="robots" content="noindex" />{% endif %}
+            {% if fsc.webPage.noindex %}<meta name="robots" content="noindex" />{% endif %}
             <link rel="canonical" href="{{ webUrl }}{{ fsc.webPage.link() }}" />
             {% for block in fsc.pageComposer.getBlocks('meta') %}
                 {{ block.content() | raw }}
