--- a/View/Master/PortalTemplate.html.twig
+++ b/View/Master/PortalTemplate.html.twig
@@ -69,12 +69,12 @@
                             </a>
                         </div>
                     {% elseif fsc.contact %}
-                        <a class="btn btn-success" href="#" onclick="return showModal('logoutModal')">
+                        <a class="btn btn-success" href="#" onclick="return showModal('logoutModal');">
                             <i class="fa fa-user-circle fa-fw" aria-hidden="true"></i>
                             <span>{{ fsc.contact.nombre }}</span>
                         </a>
                     {% else %}
-                        <a class="btn" href="#" onclick="return showModal('loginModal')">
+                        <a class="btn" href="#" onclick="return showModal('loginModal');">
                             <i class="fa fa-user-circle fa-fw" aria-hidden="true"></i>
                         </a>
                     {% endif %}
