--- a/View/ChatBot.html.twig
+++ b/View/ChatBot.html.twig
@@ -4,7 +4,7 @@
     <div class="body-section">
         <br/>
         <div class="container grid-lg">
-            <div class="row">
+            <div class="columns">
                 <div class="col-12">
                     <h1 class="text-center">
                         <i class="fa fa-commenting-o fa-fw" aria-hidden="true"></i> ChatBot
