--- a/View/Master/LoginToContinue.html.twig
+++ b/View/Master/LoginToContinue.html.twig
@@ -4,7 +4,7 @@
     <div class="body-section">
         <br/>
         <div class="container grid-lg">
-            <div class="row">
+            <div class="columns">
                 <div class="col-12 text-center">
                     <h1>
                         <i class="fa fa-sign-in fa-fw" aria-hidden="true"></i> {{ i18n.trans('login-to-continue') }}
