--- a/View/Master/PortalTemplate.html.twig
+++ b/View/Master/PortalTemplate.html.twig
@@ -12,7 +12,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
             <meta name="generator" content="FacturaScripts" />
             {% if fsc.webPage.noindex %}<meta name="robots" content="noindex" />{% endif %}
-            <link rel="canonical" href="{{ webUrl }}{{ fsc.webPage.link() }}" />
+            <link rel="canonical" href="{{ webUrl }}{{ fsc.webPage.url('link') }}" />
             {% for block in fsc.pageComposer.getBlocks('meta') %}
                 {{ block.content() | raw }}
             {% endfor %}
@@ -35,7 +35,7 @@
                 <section class="navbar-section hide-xs">
                     {% for menuItem in fsc.getPublicMenu() %}
                         {% set activeClass = (menuItem.idpage == fsc.webPage.idpage) ? '' : ' btn-link' %}
-                        <a class="btn{{ activeClass }}" href="{{ menuItem.link() | raw }}">
+                        <a class="btn{{ activeClass }}" href="{{ menuItem.url('link') | raw }}">
                             {{ menuItem.shorttitle }}
                         </a>
                     {% endfor %}
@@ -49,7 +49,7 @@
                             {% for menuItem in fsc.getPublicMenu() %}
                                 {% set activeClass = (menuItem.idpage == fsc.webPage.idpage) ? 'active' : '' %}
                                 <li class="menu-item">
-                                    <a class="{{ activeClass }}" href="{{ menuItem.link() | raw }}">
+                                    <a class="{{ activeClass }}" href="{{ menuItem.url('link') | raw }}">
                                         <i class="fa {{ menuItem.icon }} fa-fw" aria-hidden="true"></i> {{ menuItem.shorttitle }}
                                     </a>
                                 </li>
@@ -119,7 +119,7 @@
                     {% for key, menuItem in fsc.getPublicFooter() %}
                         {% if key > 0 %}|{% endif %}
                         {% set activeClass = (menuItem.idpage == fsc.webPage.idpage) ? '' : ' btn-link' %}
-                        <a href="{{ menuItem.link() | raw }}" class="btn{{ activeClass }}">{{ menuItem.title }}</a>
+                        <a href="{{ menuItem.url('link') | raw }}" class="btn{{ activeClass }}">{{ menuItem.title }}</a>
                     {% endfor %}
                 </div>
             </div>
