--- a/View/Master/PortalTemplate.html.twig
+++ b/View/Master/PortalTemplate.html.twig
@@ -24,10 +24,11 @@
         {% block css %}
             <style>{{ assetCombine(['Plugins/webportal/node_modules/spectre.css/dist/spectre.min.css',
 'node_modules/font-awesome/css/font-awesome.min.css','Dinamic/Assets/CSS/webportal.css'])|raw }}</style>
-            {% for block in fsc.pageComposer.getBlocks('css') %}
-                {{ block.content() | raw }}
-            {% endfor %}
-        {% endblock %}
+                {% for block in fsc.pageComposer.getBlocks('css') %}
+                    {{ block.content() | raw }}
+                {% endfor %}
+            {% endblock %}
+            {{ debugBarRender.renderHead()|raw }}
     </head>
     <body>
         {% block navbar %}
@@ -148,5 +149,6 @@
                 {% endfor %}
             {% endblock %}
         {% endif %}
+        {{ debugBarRender.render()|raw }}
     </body>
 </html>
