--- a/Assets/CSS/webportal.css
+++ b/Assets/CSS/webportal.css
@@ -33,9 +33,7 @@
 }
 
 .footer-section {
-    padding-bottom: 50px;
-}
-
-.container-padding {
-    padding: 10px 20px 10px 20px;
+    padding: 20px 10px 50px 10px;
+    background-color: #F8F9FA;
+    border-top: 1px solid #E0E3E7;
 }
