- Moved WebPageClass to Model\Base. - Minor CSS fixes.

--- a/Assets/CSS/webportal.css
+++ b/Assets/CSS/webportal.css
@@ -20,6 +20,14 @@
     Author     : Carlos García Gómez
 */
 
+h1 {
+    margin-bottom: 10px;
+}
+
+h2, h3, h4, h5 {
+    margin-bottom: 5px;
+}
+
 .navbar-top {
     padding: 10px 10px 0px 10px;
 }
