- Fixed bugs with homepage link, and root language pages. - Implemented cookies message as a twig macro. Now we use a form to send okCookies instead of a link.

--- a/View/Macro/PortalTemplate.html.twig
+++ b/View/Macro/PortalTemplate.html.twig
@@ -1,3 +1,13 @@
+{% macro cookiesMessage(i18n, cookiesPage) %}
+    <form id="formCookies" action="" method="post">
+        <input type="hidden" name="okCookies" value="TRUE"/>
+    </form>
+    <div class="toast toast-primary">
+        {{ cookiesPage.description | raw }} <a href="{{ cookiesPage.url('link') }}">{{ i18n.trans('read-more') }}</a>
+        | <a href="" onclick="document.getElementById('formCookies').submit(); return false;">{{ i18n.trans('accept') }}</a>
+    </div>
+{% endmacro %}
+
 <!--
     Loads and displays a list of messages from the given types
 -->
