--- a/View/Master/PortalTemplate.html.twig
+++ b/View/Master/PortalTemplate.html.twig
@@ -92,7 +92,7 @@
                         {{ Macros.message(log, ['warning'], 'warning') }}
                         {{ Macros.message(log, ['notice'], 'success') }}
                         {{ Macros.message(log, ['info'], 'primary') }}
-                        {% if fsc.showCookiesPolicy %}<div class="toast toast-primary">{{ fsc.cookiesPolicy() | raw }}</div>{% endif %}
+                        {% if fsc.showCookiesPolicy %}{{ Macros.cookiesMessage(i18n, fsc.cookiesPage()) }}{% endif %}
                     </div>
                 </div>
             </div>
