--- a/View/Macro/PortalTemplate.html.twig
+++ b/View/Macro/PortalTemplate.html.twig
@@ -1,11 +1,11 @@
 {% macro cookiesMessage(i18n, cookiesPage) %}
-    <form id="formCookies" action="" method="post">
+    <form action="" method="post">
         <input type="hidden" name="okCookies" value="TRUE"/>
+        <div class="toast toast-primary">
+            {{ cookiesPage.description | raw }} <button type="submit" class="btn">{{ i18n.trans('accept') }}</button>
+            <a href="{{ cookiesPage.url('link') }}">{{ i18n.trans('read-more') }}</a>
+        </div>
     </form>
-    <div class="toast toast-primary">
-        {{ cookiesPage.description | raw }} <a href="{{ cookiesPage.url('link') }}">{{ i18n.trans('read-more') }}</a>
-        | <a href="" onclick="document.getElementById('formCookies').submit(); return false;">{{ i18n.trans('accept') }}</a>
-    </div>
 {% endmacro %}
 
 <!--
