Improved search results and search form.

--- a/View/WebSearch.html.twig
+++ b/View/WebSearch.html.twig
@@ -5,7 +5,7 @@
         <br/>
         <div class="container grid-lg">
             <div class="columns">
-                <div class="col-12">
+                <div class="column col-12">
                     <h1 class="text-center">{{ i18n.trans('search') }}</h1>
                     <form action="{{ fsc.url() }}" method="post">
                         <div class="input-group">
@@ -20,7 +20,7 @@
                         <div class="tile">
                             <div class="tile-icon">
                                 <div class="example-tile-icon">
-                                    <i class="fa {{ item.icon }} fa-2x" aria-hidden="true"></i>
+                                    <i class="fa {{ item.icon }} fa-fw fa-2x" aria-hidden="true"></i>
                                 </div>
                             </div>
                             <div class="tile-content">
