Lot of bug fixes.

--- a/View/Macro/PortalTemplate.html.twig
+++ b/View/Macro/PortalTemplate.html.twig
@@ -49,7 +49,7 @@
                                 <i class="fa fa-twitter fa-fw" aria-hidden="true"></i> twitter
                             </a>
                         {% endif %}
-                        <div class="divider text-center" data-content="OR"></div>
+                        <div class="divider text-center" data-content="{{ i18n.trans('employees') }}"></div>
                         <div class="form-group">
                             <div class="input-group">
                                 <span class="input-group-addon">
