HybridLogin now returns to previous url.

--- a/View/Master/PortalTemplate.html.twig
+++ b/View/Master/PortalTemplate.html.twig
@@ -114,7 +114,7 @@
         {% if fsc.contact %}
             {{ Macros.logoutModal(i18n, fsc) }}
         {% elseif fsc.user == false %}
-            {{ Macros.loginModal(i18n, appSettings) }}
+            {{ Macros.loginModal(i18n, appSettings, fsc) }}
         {% endif %}
         {% block footer %}
             <div class="footer-section">
