--- a/View/Macro/PortalTemplate.html.twig
+++ b/View/Macro/PortalTemplate.html.twig
@@ -23,7 +23,7 @@
     {% endif %}
 {% endmacro %}
 
-{% macro loginModal(i18n, appSettings) %}
+{% macro loginModal(i18n, appSettings, fsc) %}
     <form action="{{ constant('FS_ROUTE') }}/" method="post" class="form">
         <div class="modal modal-sm" id="loginModal">
             <a href="#close" class="modal-overlay" aria-label="Close"></a>
@@ -35,17 +35,17 @@
                 <div class="modal-body">
                     <div class="content">
                         {% if appSettings.get('webportal','fbappid','') != '' %}
-                            <a href="{{ constant('FS_ROUTE') }}/HybridLogin?prov=facebook" class="btn btn-block">
+                            <a href="{{ constant('FS_ROUTE') }}/HybridLogin?prov=facebook&return={{ fsc.url() }}" class="btn btn-block">
                                 <i class="fa fa-facebook fa-fw" aria-hidden="true"></i> facebook
                             </a>
                         {% endif %}
                         {% if appSettings.get('webportal','googleappid','') != '' %}
-                            <a href="{{ constant('FS_ROUTE') }}/HybridLogin?prov=google" class="btn btn-block">
+                            <a href="{{ constant('FS_ROUTE') }}/HybridLogin?prov=google&return={{ fsc.url() }}" class="btn btn-block">
                                 <i class="fa fa-google fa-fw" aria-hidden="true"></i> google
                             </a>
                         {% endif %}
                         {% if appSettings.get('webportal','twitterappid','') != '' %}
-                            <a href="{{ constant('FS_ROUTE') }}/HybridLogin?prov=twitter" class="btn btn-block">
+                            <a href="{{ constant('FS_ROUTE') }}/HybridLogin?prov=twitter&return={{ fsc.url() }}" class="btn btn-block">
                                 <i class="fa fa-twitter fa-fw" aria-hidden="true"></i> twitter
                             </a>
                         {% endif %}
@@ -81,7 +81,7 @@
         <a href="#close" class="modal-overlay" aria-label="Close"></a>
         <div class="modal-container">
             <div class="modal-header">
-                <a href="#close" onclick="return hideModal('logoutModal')" class="btn btn-clear float-right" aria-label="Close"></a>
+                <a href="#close" onclick="return hideModal('logoutModal');" class="btn btn-clear float-right" aria-label="Close"></a>
                 <div class="modal-title h5">{{ i18n.trans('logout') }}</div>
                 <i class="fa fa-user-circle fa-fw" aria-hidden="true"></i>
                 <span>{{ fsc.contact.email }}</span>
