--- a/View/Master/LoginToContinue.html.twig
+++ b/View/Master/LoginToContinue.html.twig
@@ -3,20 +3,45 @@
 {% block body %}
     <div class="body-section">
         <br/>
-        <div class="container grid-lg">
+        <div class="container">
             <div class="columns">
-                <div class="col-12">
+                <div class="column col-6 col-md-12">
                     <div class="empty">
                         <div class="empty-icon">
-                            <i class="icon icon-people"></i>
+                            <i class="fa fa-user-circle fa-3x" aria-hidden="true"></i>
                         </div>
-                        <h1>
-                            <i class="fa fa-sign-in fa-fw" aria-hidden="true"></i> {{ i18n.trans('login-to-continue') }}
-                        </h1>
+                        <h1 class="empty-title h5">{{ i18n.trans('login-to-continue') }}</h1>
+                        <p class="empty-subtitle">{{ i18n.trans('login-to-continue-paragraph') }}</p>
                         <div class="empty-action">
                             <a class="btn btn-primary" href="#" onclick="return showModal('loginModal');">
-                                <i class="fa fa-user-circle fa-fw" aria-hidden="true"></i> {{ i18n.trans('login') }}
+                                {{ i18n.trans('login') }}
                             </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="column col-6 col-md-12">
+                    <div class="empty">
+                        <div class="empty-icon">
+                            <i class="fa fa-edit fa-3x" aria-hidden="true"></i>
+                        </div>
+                        <h1 class="empty-title h5">{{ i18n.trans('sign-in') }}</h1>
+                        <p class="empty-subtitle">{{ i18n.trans('sign-in-to-continue-paragraph') }}</p>
+                        <div class="empty-action">
+                            {% if appSettings.get('webportal','fbappid','') != '' %}
+                                <a href="{{ constant('FS_ROUTE') }}/HybridLogin?prov=facebook&return={{ fsc.url() }}" class="btn btn-block">
+                                    <i class="fa fa-facebook fa-fw" aria-hidden="true"></i> facebook
+                                </a>
+                            {% endif %}
+                            {% if appSettings.get('webportal','googleappid','') != '' %}
+                                <a href="{{ constant('FS_ROUTE') }}/HybridLogin?prov=google&return={{ fsc.url() }}" class="btn btn-block">
+                                    <i class="fa fa-google fa-fw" aria-hidden="true"></i> google
+                                </a>
+                            {% endif %}
+                            {% if appSettings.get('webportal','twitterappid','') != '' %}
+                                <a href="{{ constant('FS_ROUTE') }}/HybridLogin?prov=twitter&return={{ fsc.url() }}" class="btn btn-block">
+                                    <i class="fa fa-twitter fa-fw" aria-hidden="true"></i> twitter
+                                </a>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
