- Fixed bug in autocomplete on the search form. - Fixed visibility of abstract function in sectioncontroller.

--- a/View/WebSearch.html.twig
+++ b/View/WebSearch.html.twig
@@ -63,6 +63,7 @@
             $("#queryInput").autocomplete({
                 source: availableTags,
                 select: function (event, ui) {
+                    $("#queryInput").val(ui.item.label);
                     $("#searchForm").submit();
                 }
             });
